--- a/event.html
+++ b/event.html
@@ -32,12 +32,13 @@
           <div>&nbsp;</div>
           <input class="config config_event" id="config_tz_offset"  /><span>(hrs) Timezone Offset<br/>(e.g. -5 for EST, -4 for EDT, ...)</span><br/>
           <div>&nbsp;</div>
-          <input class="config config_event" id="config_head_text"  /><span>Header Text</span><br/>
+          <span>Header Text</span></br><input class="config config_event" id="config_head_text"  /><br/>
           <div>&nbsp;</div>
-          <button class="config" id="update_btn">Update Config</button>
+          <button class="config" id="update_btn">Update Config</button></br>
+          <span>(config can be updated while timer is running)</span>
         </div>
         <div>&nbsp;</div>
-        <div><a href="https://docs.google.com/document/d/1HRaZuvMOFH35sErrzWpmjiSJdn-WduvneBiDh0a5Zdo">docs</a></div>
+        <div><a href="https://docs.google.com/document/d/1HRaZuvMOFH35sErrzWpmjiSJdn-WduvneBiDh0a5Zdo">link to docs</a></div>
           <div>&nbsp;</div>
       </div>
     </div>
