--- a/cfg.html
+++ b/cfg.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="/timer/css/main.css" rel='stylesheet' type='text/css'>
+    <link href="css/main.css" rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="config" id="events"></div>
@@ -11,9 +11,10 @@
     <input class="config" type="text" id="event_trans_time"  placeholder="Transition Time (secs)"  name="event_trans_time"></input><br/>
     <input class="config" type="text" id="event_tz_offset"   placeholder="TimeZone offset (hrs)"   name="event_tz_offset"></input><br/>
     <input class="config" type="text" id="event_head_text"   placeholder="Header Text"             name="event_head_text"></input><br/>
-    <input class="config" type="text" id="event_password"    placeholder="Password"                name="event_password"></input><br/>
+    <input class="config" type="text" id="event_password"    placeholder="Event Password"                name="event_password"></input><br/>
+    <input class="config" type="text" id="event_ctl_code"    placeholder="Control Code (if any)"                name="event_ctl_code"></input><br/>
     <button class="config" id="event_submit">Add event</button>
   </body>
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
-<script src="/timer/js/cfg.js"></script>
+<script src="js/cfg.js"></script>
 </html>
