--- a/cfg.html
+++ b/cfg.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="css/main.css" rel='stylesheet' type='text/css'>
+    <link href="../css/main.css" rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="config" id="events"></div>
@@ -16,5 +16,5 @@
     <button class="config" id="event_submit">Add event</button>
   </body>
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
-<script src="js/cfg.js"></script>
+<script src="../js/cfg.js"></script>
 </html>
