--- a/event.html
+++ b/event.html
@@ -18,7 +18,7 @@
 
       <div class="config" id="control">
         <div><br/>Start/Stop Timer:</div>
-        <button class="config" id="start_btn">Start Timer</button>&nbsp;&nbsp;&nbsp;&nbsp;<button class="config" id="stop_btn">Stop Timer</button>  
+        <button class="config" id="start_btn">Start Timer</button>&nbsp;&nbsp;&nbsp;&nbsp;<button class="config" id="stop_btn">Stop/Reset Timer</button>  
       </div>
       
       <div class="config" id="admin">
