updated sound/audio handling

--- a/event.html
+++ b/event.html
@@ -14,6 +14,7 @@
         </tr></table>
         <div id="timer_bargraph"  ></div>
         <div id="timer_note"      ></div>
+        <div id="timer_audio"     ></div>
       </div>
 
       <div class="config" id="control">
